Vaccination2019-Backend/kubernetes/mongo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
  namespace: test
  labels:
    project: "vaccination"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: "vaccination"
        app: mongo
    spec:
      containers:
        - image: mongo:4
          name:  mongo
          volumeMounts:
            - name:  data
              mountPath:  /data/db
          imagePullPolicy: IfNotPresent
          args:
            - --auth
          ports:
            - name: mongo
              containerPort: 27017
          securityContext:
            privileged: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: test
spec:
  ports:
    - name: mongo
      port: 27117
      targetPort: 27017
  type: LoadBalancer
  selector:
    app: mongo
